--- a/resource-server/resource-server-video-streaming/pom.xml
+++ b/resource-server/resource-server-video-streaming/pom.xml
@@ -36,7 +36,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>${start.class}</mainClass>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
