--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,17 +4,16 @@ server:
 spring:
   application:
     name: api-gateway
-  main:
-    allow-circular-references: true
   cloud:
     gateway:
-      routes:
-        - id: resource-server
-          uri: lb://RESOURCE-SERVER
-          predicates:
-            - Path=/resources/**
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
 
 eureka:
   client:
     service-url:
       default: http://localhost:8761/eureka
+  instance:
+    hostname: localhost
