--- a/resource-server/resource-server-application/src/main/resources/application.properties
+++ b/resource-server/resource-server-application/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/video-streaming
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+security.oauth2.resource.jwt.key-value=key
+
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
