--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>api-gateway</module>
+        <module>authorization-server</module>
         <module>media</module>
         <module>service-discovery</module>
         <module>resource-server</module>
